# mcp-playground

./: .env.tmpl  LICENSE  README.md  main.py  pyproject.toml
src/mcp-playground/: basic_client.py  multi_server_client.py  task_server.py  weather_server.py
src/mcp_playground/: __init__.py
src/single-server/: mcp_client.py  weather_client.py  weather_server.py
src/single-server/resources/: delivery_log.txt
tests/: test_task_server.py  test_weather_server.py
