[project]
name = "mcp-playground"
version = "0.1.0"
description = "Simple client-server MCP playground."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.5.4",
    "mcp>=1.12.1",
    "mypy>=1.17.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "ruff>=0.12.5",
    "typer>=0.16.0",
    "types-requests>=2.32.4.20250611",
]
